testsuite/tests/grammar/invalid_token_node/derive_trait.lkt
import common

@abstract
class BaseExample: FooNode {
    @parse_field
    f: Identifier
}

class Example: BaseExample implements TokenNode {
}
